--- a/March 29 Homework Simcha Fund.Web/Views/Simcha/Contributions.cshtml
+++ b/March 29 Homework Simcha Fund.Web/Views/Simcha/Contributions.cshtml
@@ -35,7 +35,7 @@
                         </div>
                     </td>
                     <td>@c.FirstName @c.LastName</td>
-                    <td>@c.Balance</td>
+                    <td>@c.Balance.ToString("C")</td>
                     <td style="text-align: center;">
                         <i class="@(c.AlwaysInclude ? "bi bi-check" : "")" style="font-size:30px"></i>
                     </td>
